--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,7 @@
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.png</url-pattern>
+    <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
 
   <!-- 中文处理过滤器 -->
